# inf

./: .gitignore  CMakeLists.txt  README.md  agent.md  vcpkg.json
.cursor/: rules
.github/workflows/: ci.yml
apps/: CMakeLists.txt  main.cpp  plane_detect.cpp
cmake/: InfMVSConfig.cmake.in
modules/InfCore/: CMakeLists.txt  InfCore.hpp  camera.cpp  camera.hpp  core.cpp  core.hpp  enum_utils.hpp  log.cpp  log.hpp  undistort.cpp  undistort.hpp
modules/InfIO/: CMakeLists.txt  InfIO.hpp  io.cpp  io.hpp  macro.hpp  ply.cpp  ply.hpp
modules/InfMesh/: CMakeLists.txt  InfMesh.hpp  mesh.cpp  mesh.hpp
modules/InfMeshPipeline/: CMakeLists.txt  InfMeshPipeline.hpp  pipeline.cpp  pipeline.hpp
modules/InfPointCloud/: CMakeLists.txt  InfPointCloud.hpp  downsample.cpp  filters.cpp  mvs.cpp  normals.cpp  pcl_adapter.hpp  plane_detector.cpp  plane_detector.hpp  point_cloud.cpp  point_cloud.hpp  smooth.cpp  spacing.cpp  utils.cpp
modules/InfTexture/: CMakeLists.txt  InfTexture.hpp  texture.cpp  texture.hpp
tests/: CMakeLists.txt  test_core.cpp  test_io.cpp  test_pointcloud.cpp
